K8S-Manifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organic-app-deployment 
spec:
  replicas: 3
  selector:
    matchLabels:
      web: organic
  template:
    metadata:
      labels:
        web: organic 
    spec:
      containers:
      - name: test-cont 
        image: muralisocial123/organic-app-web:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
          requests:
            memory: "100Mi"
            cpu: "100m"  
        ports:
        - containerPort: 5656
---
apiVersion: v1
kind: Service
metadata:
  name: oragnic-svc 
spec:
  selector:
    web: organic 
  ports:
  - port: 5657
    targetPort: 5656
  type: ClusterIP
