K8S-Manifests/cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-app-deployment 
spec:
  replicas: 3
  selector:
    matchLabels:
      web: cart
  template:
    metadata:
      labels:
        web: cart  
    spec:
      containers:
      - name: test-cont 
        image: muralisocial123/cart-page-test:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
          requests:
            memory: "100Mi"
            cpu: "100m"  
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: cart-svc 
spec:
  selector:
    web: cart 
  ports:
  - port: 3001
    targetPort: 3000
  type: ClusterIP
